--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,21 +1,27 @@
 .mb-1 {
     margin-bottom: 1rem !important;
 }
+
 .mb-2 {
     margin-bottom: 2rem !important;
 }
+
 .mt-1 {
     margin-top: 1rem !important;
 }
+
 .mt-2 {
     margin-top: 2rem !important;
 }
+
 .mt-3 {
     margin-top: 3rem !important;
 }
+
 .mt-4 {
     margin-top: 3rem !important;
 }
+
 .ml-1 {
     margin-right: 10px !important;
 }
@@ -78,11 +84,13 @@ p {
     max-height: 60px;
 }
 
-.nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
+.nav-menu a:hover,
+.nav-menu .active>a,
+.nav-menu li:hover>a {
     color: #884287;
 }
 
-.nav-menu > ul > li > a:before {
+.nav-menu>ul>li>a:before {
     content: "";
     position: absolute;
     width: 100%;
@@ -148,6 +156,17 @@ p {
     color: #864184;
 }
 
+.gallery .owl-nav {
+    display: none;
+}
+
+.gallery-img img {
+    width: 100%;
+    max-width: 250px;
+    height: 250px;
+    object-fit: cover;
+}
+
 .counts .count-box i {
     position: absolute;
     top: -28px;
@@ -201,7 +220,8 @@ p {
     transition: ease-in-out 0.3s;
 }
 
-.services .icon-box:hover h4 a, .services .icon-box:hover .icon i {
+.services .icon-box:hover h4 a,
+.services .icon-box:hover .icon i {
     color: #834289;
 }
 
@@ -230,11 +250,13 @@ p {
     border: 2px dotted #8641838c;
 }
 
-.address a, .phone a {
+.address a,
+.phone a {
     color: #824188;
 }
 
-.address a:hover, .phone a:hover {
+.address a:hover,
+.phone a:hover {
     color: #824188d3;
 }
 
@@ -255,11 +277,40 @@ p {
     border-radius: 4px;
 }
 
-.nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
+.nav-menu .drop-down ul a:hover,
+.nav-menu .drop-down ul .active>a,
+.nav-menu .drop-down ul li:hover>a {
     color: #884287;
 }
 
-.mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
+.mobile-nav a:hover,
+.mobile-nav .active>a,
+.mobile-nav li:hover>a {
     color: #884287;
     text-decoration: none;
+}
+
+.owl-theme .owl-dots {
+    margin-top: 25px;
+}
+
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
+    background-color: #864184;
+}
+
+.vbox-container img {
+    height: 85vh;
+}
+
+@media only screen and (max-width:999px) {
+    .gallery-img img {
+        max-width: 100%;
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .vbox-container img {
+        height: auto;
+    }
 }
